fixed width bug so flex now wraps, and added footer with total and checkout button on all pages

--- a/src/sass/Product.scss
+++ b/src/sass/Product.scss
@@ -1,9 +1,13 @@
 .product {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
 	border-radius: 5px;
 	background: white;
 	transition: 0.2s ease-in-out;
-	width: 333px;
-	margin: 30px;
+	max-width: 300px;
+	margin-top: 2rem;
 
 	&:hover {
 		box-shadow: 0px 5px 37px -22px rgba(0, 0, 0, 1);
@@ -14,6 +18,7 @@
 	}
 
 	.title {
+		text-align: center;
 		font-weight: bold;
 		margin: 10px 0 0 25px;
 	}
@@ -24,10 +29,10 @@
 	}
 
 	img {
-		object-fit: contain;
+		width: 100%;
 		border-top-left-radius: 5px;
 		border-top-right-radius: 5px;
-		max-width: 333px;
+		max-width: 300px;
 	}
 
 	button {
@@ -37,12 +42,12 @@
 		background: transparent;
 		transition: 0.15s ease-in-out;
 		margin: 10px 0;
-		color: lightcoral;
+		color: rgb(0, 0, 0);
 		margin-left: 25px;
 
 		&:hover {
 			cursor: pointer;
-			background: lightcoral;
+			background: rgb(238, 72, 72);
 			color: white;
 		}
 	}
